fix footer on small screens

--- a/client/src/dashboard/styles/components/_footer.scss
+++ b/client/src/dashboard/styles/components/_footer.scss
@@ -13,6 +13,10 @@
   padding-bottom: 2.4em;
   float: left;
 
+  @media (max-width:$screen-sm){
+    float: none;
+  }
+
   @media (min-width:$screen-sm-minor) {
     padding-bottom: 0;
     padding-right: 1em;
